[tool.poetry]
name = "finalproject_antoshina_25_555"
version = "0.1.0"
description = "Консольное приложение для управления валютным кошельком"
authors = ["Antoshina <your-email@example.com>"]
readme = "README.md"

packages = [
    {include = "valutatrade_hub"},
    {include = "main.py"}
]

[tool.poetry.dependencies]
python = "^3.9"
prettytable = "^3.9.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"

[tool.poetry.scripts]
project = "main:main"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long
]

[build-system]
requires = ["poetry-core"]
build-background = "poetry.core.masonry.api"

[tool.valutatrade]
data_directory = "data"
rates_ttl_seconds = 300
default_base_currency = "USD"
log_level = "INFO"
log_file = "logs/valutatrade.log"
max_log_size_mb = 10
backup_count = 5
exchangerate_api_key = "37ad3540dcf011478170ac93"
coingecko_api_key = ""

# Parser settings
parser_update_interval = 5